Add transaction controller
